# rpi-fan

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md  build.bat  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: auto.rs  consts.rs  dirs.rs  enter.rs  error.rs  lib.rs  state.rs  utils.rs
backend/src/routes/: mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/assets/: style.scss
frontend/public/: index.html
frontend/src/: app.rs  index.rs  lib.rs  main.rs
gpio/: Cargo.toml
gpio/src/: lib.rs
src/: main.rs
sys/: Cargo.toml
sys/src/: fake.rs  gpio.rs  lib.rs  temp.rs
