[package]
name = "rpi-fan"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "frontend", 
    "backend",
    "gpio"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tokio = { version = "1.18.2", features = ["full"] }
backend = { version = "0.1.0", path = "backend" }
