[package]
name = "rpi-fan"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "frontend", 
    "backend",
    "sys"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tokio = { version = "1.20.4", features = ["macros"] }
backend = { version = "0.1.0", path = "backend" }
