[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
rocket = "0.4.10"

[dependencies.rppal]
git = "https://github.com/golemparts/rppal.git"
rev = "54e54cbe17293044eaf77bc599631c0ecc572f91"