[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
rocket = "0.4.10"
rocket_contrib = "0.4.10"
parking_lot = "0.12.0"
strum = { version = "0.24.0", features = ["derive"] }
directories = "4.0.1"
lazy_static = "1.4.0"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
sys = { path = "../sys" }
reqwest = { version = "0.11.10", features = ["native-tls-vendored", "blocking"] }
