[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.80"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
yew-router = "0.14.0"
