[package]
name = "sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

[target.aarch64-unknown-linux-gnu.dependencies]
rppal = { git = "https://github.com/golemparts/rppal.git", rev = "54e54cbe17293044eaf77bc599631c0ecc572f91" }

[target.'cfg(not(target = "aarch64-unknown-linux-gnu"))'.dependencies]
thiserror = "1.0.31"
fastrand = "1.7.0"